# riscv-vector-intrinsic-fuzzing

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile.in  README.md  jenkins-ci.sh  rif-test  rif.adoc
.github/workflows/: clang-format.yml
include/: Basic.hpp  CustomOperator.def  CustomValue.def  Decode.hpp  FuseGraph.hpp  Graph.hpp  Operator.hpp  Processor.hpp  RawDatumOperand.hpp  TypeInfo.hpp  Utils.hpp  Value.hpp
include/rif-local/: vadc_vvm.h  vadc_vxm.h  vcpop_m.h  vfabs_v.h  vfirst_m.h  vfneg_v.h  vid_v.h  viota_m.h  vle16_v.h  vle32_v.h  vle64_v.h  vle8_v.h  vloxei16_v.h  vloxei32_v.h  vloxei64_v.h  vloxei8_v.h  vlse16_v.h  vlse32_v.h  vlse64_v.h  vlse8_v.h  vluxei16_v.h  vluxei32_v.h  vluxei64_v.h  vluxei8_v.h  vmacc_vv.h  vmacc_vx.h  vmadc_vv.h  vmadc_vvm.h  vmadc_vx.h  vmadc_vxm.h  vmadd_vv.h  vmadd_vx.h  vmclr_m.h  vmerge_vvm.h  vmerge_vxm.h  vmfge_vv.h  vmfgt_vv.h  vmmv_m.h  vmnot_m.h  vmsbc_vv.h  (+51 more)
prebuilt/metal-run/: .gitignore  .gitmodules  README.md  arty-run  burn_and_run.sh  gem5-run  just-run  markpoint-run  merge-qhist  metal-run  qemu-run  requirements.txt  sanity_check.sh  spike-run  sum-qhist  utils.py
prebuilt/metal-run/docs/: README.arty_run.md  README.metal_run.md
prebuilt/metal-run/justRun/: File.py  Gdb.py  Machine.py  Main.py  PrebuiltUtils.py  RISCVISAString.py  Simulator.py
prebuilt/metal-run/prebuilt/prebuilt-gdb/: README.md
prebuilt/metal-run/prebuilt/prebuilt-qemu/: Makefile  README.md
prebuilt/metal-run/prebuilt/prebuilt-qemu/plugin-src/: insn.cxx
prebuilt/metal-run/prebuilt/prebuilt-spike/: Makefile  README.md
prebuilt/metal-run/simulator/: gem5.py  markpoint.py  qemu.py  qemu_sys.py  spike.py  verilator.py
prebuilt/metal-run/test/: qemu-sys.sh  qemu.sh  test_all.sh  verilator.sh
prebuilt/metal-run/testsuite/: conftest.py  test_qemu.py
prebuilt/metal-run/testsuite/data/: hello.c
scripts/: GenerateOperatorComputeHeaders.py  HeaderLiteral.py  MiscMaskLiteral.py  OpDefParser.py  TestCodeGen.py  TestCodeGenUtils.py  UpdateCodeGenTests.py  VLiteral.py  VSLiteral.py  VVLiteral.py  VVMLiteral.py  VXLiteral.py  VXMLiteral.py  XLiteral.py  report
test/: CMakeLists.txt  TestUtils.hpp  rules.mk  testAddVV.cpp  testAddVVMask.cpp  testAddVX.cpp  testAddVXMask.cpp  testAndVV.cpp  testAndVVMask.cpp  testAndVX.cpp  testAndVXMask.cpp  testCpopM.cpp  testDatum.cpp  testEnumerateLmul.cpp  testEnumerateLmulMask.cpp  testFadd.cpp  testFaddMask.cpp  testMsbfM.cpp  testMsifM.cpp  testMsofM.cpp  testNegV.cpp  testOneDFloatingPointValue.cpp  testOneDIntegralValue.cpp  testOrVV.cpp  testOrVVMask.cpp  testOrVX.cpp  testOrVXMask.cpp  testPoc.cpp  testPolicy.cpp  testRsubVX.cpp  testRsubVXMask.cpp  testScalarValue.cpp  testSllVV.cpp  testSllVVMask.cpp  testSllVX.cpp  testSllVXMask.cpp  testSraVV.cpp  testSraVVMask.cpp  testSraVX.cpp  testSraVXMask.cpp  (+11 more)
test/codegen-golden/: AaddVV8VInt8VBVIVIVI_TAMU.c  AaddVV8VInt8VBVIVIVI_TUMA.c  AaddVV8VInt8VBVIVIVI_TUMU.c  AaddVV8VInt8VBVIVIVI_m.c  AaddVV8VInt8VBVIVI_TAMA.c  AaddVV8VInt8VIVI.c  AaddVV8VInt8VIVIVI_TU.c  AaddVV8VInt8VIVI_TA.c  AaddVX8VInt8VBVISI_TAMA.c  AaddVX8VInt8VBVIVISI_TAMU.c  AaddVX8VInt8VBVIVISI_TUMA.c  AaddVX8VInt8VBVIVISI_TUMU.c  AaddVX8VInt8VBVIVISI_m.c  AaddVX8VInt8VISI.c  AaddVX8VInt8VISI_TA.c  AaddVX8VInt8VIVISI_TU.c  AadduVV8VUInt8VBVUVUVU_TAMU.c  AadduVV8VUInt8VBVUVUVU_TUMA.c  AadduVV8VUInt8VBVUVUVU_TUMU.c  AadduVV8VUInt8VBVUVUVU_m.c  AadduVV8VUInt8VBVUVU_TAMA.c  AadduVV8VUInt8VUVU.c  AadduVV8VUInt8VUVUVU_TU.c  AadduVV8VUInt8VUVU_TA.c  AadduVX8VUInt8VBVUSU_TAMA.c  AadduVX8VUInt8VBVUVUSU_TAMU.c  AadduVX8VUInt8VBVUVUSU_TUMA.c  AadduVX8VUInt8VBVUVUSU_TUMU.c  AadduVX8VUInt8VBVUVUSU_m.c  AadduVX8VUInt8VUSU.c  AadduVX8VUInt8VUSU_TA.c  AadduVX8VUInt8VUVUSU_TU.c  AdcVVM8VInt8VIVIVB.c  AdcVVM8VInt8VIVIVB_TA.c  AdcVVM8VInt8VIVIVIVB_TU.c  AdcVXM8VInt8VISIVB.c  AdcVXM8VInt8VISIVB_TA.c  AdcVXM8VInt8VIVISIVB_TU.c  AddVV8VInt8.c  AddVV8VInt8TA.c  (+2052 more)
tool/: CMakeLists.txt  RandomGenUtils.cpp  RandomGenUtils.hpp  fused_gen.cpp  poc.cpp  random_gen.cpp
